--- a/index.html
+++ b/index.html
@@ -12,35 +12,89 @@
   <!--
     Previous project placeholder begins
   -->
-  <div class="header">
-    <h1>Morgan McCircuit</h1>
-    <h2>I write code</h2>
-  </div>
+  <nav class="navbar navbar-inverse">
+      <div class="container">
+        <a class="navbar-brand" href="#">Huhoo</a>
+        <div class="collopse navbar-collapse" id="portfolio-collapse-menu">
+          <ul class="nav navbar-nav">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+          </ul>
+        </div>
+      </div>
+  </nav>
 
-  <div class="tagline">
-    <h3>Who I am</h3>
-    <p>Hi, my name is Morgan and I love to write code that is efficient.</p>
-  </div>
+  <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+  <!-- Indicators -->
+  <ol class="carousel-indicators">
+    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+  </ol>
 
+  <!-- Wrapper for slides -->
+  <div class="carousel-inner" role="listbox">
+    <div class="item active">
+      <div clss="container">
+        <div class="carousel-caption">
+          <h1>Who I am</h1>
+          <p>I'm a beginer to Front-end Developing</p>
+        </div>
+      </div>
+    </div>
+    <div class="item">
+      <div class="container">
+        <div class="carousel-caption">
+        <h1>What am I doing now</h1>
+        <p>I'm learning courses on Code School</p>
+        </div>
+      </div>
+    </div>
+    <div class="item">
+      <div class="container">
+        <div class="carousel-caption">
+        <h1>What's my goal</h1>
+        <p>I'm preparing for working as a Front-end developer</p>
+        </div>
+      </div>
+    </div>
 
-  <div class="skills">
-    <h3>What I do</h3>
-    <p>Here are some of the languages I use on a day-to-day.</p>
-    <ul>
-      <li>HTML</li>
-      <li>CSS</li>
-      <li>JavaScript</li>
-    </ul>
+  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
   </div>
+</div>
 
-  <div class="contact">
-    <h3>Get in touch</h3>
-    <p>I live in the cloud and can't be seen. Send messages to the good people at <a target="_blank" href="https://twitter.com/codeschool">Code School</a> and they'll notify me.</p>
+<div class="marketing">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-4">
+        <span class="glyphicon glyphicon-pencil"></span>
+        <p>HTML & CSS</p>
+      </div>
+      <div class="col-md-4">
+        <span class="glyphicon glyphicon-cog"></span>
+        <p>Javascript</p>
+      </div>
+      <div class="col-md-4">
+        <span class="glyphicon glyphicon-briefcase"></span>
+        <p>Git</p>
+      </div>
+    </div>
   </div>
-  <!--
-    Previous project placeholder ends
-    (unused pieces will be deleted at the last task)
-  -->
+ </div>
+
+ <div class="footer">
+   <div class="container">
+     <h3>Contact me here!</h3>
+     <p>You can find me here <a href="http://github.com/huhoojoy">huhoojoy on Github</a></p>
+   </div>
+ </div>
 
 
   <script src="https://code.jquery.com/jquery-3.1.0.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous"></script>
