--- a/src/index.html
+++ b/src/index.html
@@ -75,15 +75,15 @@
     <div class="row">
       <div class="col-md-4">
         <span class="glyphicon glyphicon-pencil"></span>
-        <p>HTML & CSS</p>
+        <h2>HTML & CSS</h2>
       </div>
       <div class="col-md-4">
         <span class="glyphicon glyphicon-cog"></span>
-        <p>Javascript</p>
+        <h2>Javascript</h2>
       </div>
       <div class="col-md-4">
         <span class="glyphicon glyphicon-briefcase"></span>
-        <p>Git</p>
+        <h2>Git</h2>
       </div>
     </div>
   </div>
