--- a/src/index.html
+++ b/src/index.html
@@ -76,14 +76,17 @@
       <div class="col-md-4">
         <span class="glyphicon glyphicon-pencil"></span>
         <h2>HTML & CSS</h2>
+        <p>HTML&CSS help me to understand the construction of web pages, and how can I use it to style a web page.</p>
       </div>
       <div class="col-md-4">
         <span class="glyphicon glyphicon-cog"></span>
         <h2>Javascript</h2>
+        <p>Learning about Js give me the ability to build a dynamic web page, where I can interactive with visitors, and build some tremendous functions to achieve my goals.</p>
       </div>
       <div class="col-md-4">
         <span class="glyphicon glyphicon-briefcase"></span>
         <h2>Git</h2>
+        <p>Wow! I never know there is such a fatanstic tool for Software developers, until I learn about Git. (Although I'm still not a real Software developer~~)
       </div>
     </div>
   </div>
