--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@
       <div clss="container">
         <div class="carousel-caption">
           <h1>Who I am</h1>
-          <p>I'm a beginer to Front-end Developing</p>
+          <p>I'm a beginner to Front-end Developing</p>
         </div>
       </div>
     </div>
